--- a/poseviewer.html
+++ b/poseviewer.html
@@ -26,7 +26,7 @@
 <video id="video" playsinline autoplay muted></video>
 <canvas id="canvas"></canvas>
 <div id="info">Initializing...</div>
-<canvas id="plotCanvas" style="width:90vw; max-width:600px; height:300px;"></canvas>
+<canvas id="plotCanvas" width="600" height="300"></canvas>
 
 <script>
 let video = document.getElementById('video');
@@ -98,12 +98,12 @@ document.getElementById('startRecBtn').addEventListener('click', () => {
     rvecHistory = [];
     tvecHistory = [];
     recording = true;
-    info.textContent = "Recording poses...";
+    info.textContent = "Recording poses... Frames recorded: 0";
 });
 
 document.getElementById('stopRecBtn').addEventListener('click', () => {
     recording = false;
-    info.textContent = "Recording stopped. Plotting...";
+    info.textContent = `Recording stopped. Frames recorded: ${rvecHistory.length}`;
     plotPoses();
 });
 
@@ -150,7 +150,8 @@ function tick() {
 
         if (success) {
             info.textContent = `rvec: [${Array.from(rvec.data64F).map(x=>x.toFixed(3)).join(", ")}]\n` +
-                               `tvec: [${Array.from(tvec.data64F).map(x=>x.toFixed(3)).join(", ")}]`;
+                               `tvec: [${Array.from(tvec.data64F).map(x=>x.toFixed(3)).join(", ")}]` +
+                               (recording ? `\nFrames recorded: ${rvecHistory.length + 1}` : '');
 
             if (recording) {
                 rvecHistory.push(Array.from(rvec.data64F));
@@ -174,7 +175,9 @@ function tick() {
 
         objPoints.delete(); imagePoints.delete(); rvec.delete(); tvec.delete(); axis.delete(); imgpts.delete();
     } else {
-        info.textContent = "No QR code detected";
+        info.textContent = recording 
+            ? `Recording poses... Frames recorded: ${rvecHistory.length}` 
+            : "No QR code detected";
     }
 
     cv.imshow(canvas, src);
@@ -185,6 +188,11 @@ function tick() {
 
 // Plot poses with Chart.js
 function plotPoses() {
+    if (rvecHistory.length === 0 || tvecHistory.length === 0) {
+        info.textContent = "No data recorded!";
+        return;
+    }
+
     const labels = rvecHistory.map((_, i) => i);
 
     const data = {
