--- a/poseviewer.html
+++ b/poseviewer.html
@@ -78,20 +78,42 @@ async function startApplication() {
         await initCamera();
         qrDetector = new cv.QRCodeDetector();
 
-        let w = video.videoWidth || 640;
+        let w = video.videoWidth  || 640;
         let h = video.videoHeight || 480;
-        let f = Math.max(w, h);
-        cameraMatrix = cv.matFromArray(3,3,cv.CV_64F, [f,0,w/2, 0,f,h/2, 0,0,1]);
-        distCoeffs = cv.Mat.zeros(4,1,cv.CV_64F);
+
+        // --- Samsung S23+ main camera HFOV = 85° ---
+        const HFOV_DEG = 85.0;
+        const HFOV = HFOV_DEG * Math.PI / 180;
+
+        // Focal lengths in pixels (derived from FOV)
+        const fx = (w / 2) / Math.tan(HFOV / 2);
+        const VFOV = 2 * Math.atan((h / w) * Math.tan(HFOV / 2));
+        const fy = (h / 2) / Math.tan(VFOV / 2);
+
+        // Principal point (center)
+        const cx = w / 2;
+        const cy = h / 2;
+
+        cameraMatrix = cv.matFromArray(3, 3, cv.CV_64F, [
+            fx, 0,  cx,
+            0,  fy, cy,
+            0,  0,   1
+        ]);
+
+        // Distortion coefficients — zero is safest
+        distCoeffs = cv.Mat.zeros(5, 1, cv.CV_64F);
 
         initialized = true;
         info.textContent = "Point your camera at a QR code.";
         tick();
+
     } catch (error) {
         console.error(error);
-        info.textContent = "Camera error: " + (error && error.message ? error.message : error);
+        info.textContent = "Camera error: " +
+            (error && error.message ? error.message : error);
     }
 }
+
 
 // Start / stop recording buttons
 document.getElementById('startRecBtn').addEventListener('click', () => {
